--- a/app/kitchen.html
+++ b/app/kitchen.html
@@ -113,22 +113,22 @@
 	<div class="slider__big--window">
 		<ul class="slider__wrapper">
 			<li>
-				<img src="/images/slider-big.jpg" alt="foto">
+				<img src="./images/slider-big.jpg" alt="foto">
 			</li>
 			<li>
-				<img src="/images/slider-big.jpg" alt="foto">
+				<img src="./images/slider-big.jpg" alt="foto">
 			</li>
 			<li>
-				<img src="/images/slider-big.jpg"alt="foto">
+				<img src="./images/slider-big.jpg"alt="foto">
 			</li>
 			<li>
-				<img src="/images/slider-big.jpg" alt="foto">
+				<img src="./images/slider-big.jpg" alt="foto">
 			</li>
 			<li>
-				<img src="/images/slider-big.jpg" alt="foto">
+				<img src="./images/slider-big.jpg" alt="foto">
 			</li>
 			<li>
-				<img src="/images/slider-big.jpg" alt="foto">
+				<img src="./images/slider-big.jpg" alt="foto">
 			</li>
 		</ul>
 	</div>
@@ -235,7 +235,7 @@
 			<div class="selection__wrap">
 				<div class="selection__box">
 					<div class="selection__img">
-						<img src="/images/goods1.jpg" alt="foto">
+						<img src="./images/goods1.jpg" alt="foto">
 					</div>
 					<div class="selection__name">Варочная панель Electrolux</div>
 					<div class="selection__product">T62R36S1</div>	
@@ -245,7 +245,7 @@
 				</div>
 				<div class="selection__box">
 					<div class="selection__img">
-						<img src="/images/goods1.jpg" alt="foto">
+						<img src="./images/goods1.jpg" alt="foto">
 					</div>
 					<div class="selection__name">Варочная панель Electrolux</div>
 					<div class="selection__product">T62R36S1</div>
@@ -255,7 +255,7 @@
 				</div>
 				<div class="selection__box">
 					<div class="selection__img">
-						<img src="/images/goods1.jpg" alt="foto">
+						<img src="./images/goods1.jpg" alt="foto">
 					</div>
 					<div class="selection__name">Варочная панель Electrolux</div>
 					<div class="selection__product">T62R36S1</div>
@@ -265,7 +265,7 @@
 				</div>
 				<div class="selection__box">
 					<div class="selection__img">
-						<img src="/images/goods1.jpg" alt="foto">
+						<img src="./images/goods1.jpg" alt="foto">
 					</div>
 					<div class="selection__name">Варочная панель Electrolux</div>
 					<div class="selection__product">T62R36S1</div>
