--- a/app/tech.html
+++ b/app/tech.html
@@ -123,7 +123,7 @@
 				<div class="selection__wrap">
 					<a href="#" class="selection__box">
 						<div class="selection__img">
-							<img src="/images/goods1.jpg" alt="foto">
+							<img src="./images/goods1.jpg" alt="foto">
 							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
 						</div>
 						<div class="selection__name">Варочная панель Electrolux</div>
@@ -134,7 +134,7 @@
 					</a>
 					<a class="selection__box">
 						<div class="selection__img">
-							<img src="/images/goods1.jpg" alt="foto">
+							<img src="./images/goods1.jpg" alt="foto">
 							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
 						</div>
 						<div class="selection__name">Варочная панель Electrolux</div>
@@ -145,7 +145,7 @@
 					</a>
 					<a class="selection__box">
 						<div class="selection__img">
-							<img src="/images/goods1.jpg" alt="foto">
+							<img src="./images/goods1.jpg" alt="foto">
 							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
 						</div>
 						<div class="selection__name">Варочная панель Electrolux</div>
@@ -156,7 +156,7 @@
 					</a>
 					<a class="selection__box">
 						<div class="selection__img">
-							<img src="/images/goods1.jpg" alt="foto">
+							<img src="./images/goods1.jpg" alt="foto">
 							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
 						</div>
 						<div class="selection__name">Варочная панель Electrolux</div>
@@ -167,7 +167,7 @@
 					</a>
 					<a class="selection__box">
 						<div class="selection__img">
-							<img src="/images/goods1.jpg" alt="foto">
+							<img src="./images/goods1.jpg" alt="foto">
 							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
 						</div>
 						<div class="selection__name">Варочная панель Electrolux</div>
@@ -178,7 +178,7 @@
 					</a>
 					<a class="selection__box">
 						<div class="selection__img">
-							<img src="/images/goods1.jpg" alt="foto">
+							<img src="./images/goods1.jpg" alt="foto">
 							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
 						</div>
 						<div class="selection__name">Варочная панель Electrolux</div>
@@ -189,7 +189,7 @@
 					</a>
 					<a class="selection__box">
 						<div class="selection__img">
-							<img src="/images/goods1.jpg" alt="foto">
+							<img src="./images/goods1.jpg" alt="foto">
 							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
 						</div>
 						<div class="selection__name">Варочная панель Electrolux</div>
@@ -200,7 +200,7 @@
 					</a>
 					<a class="selection__box">
 						<div class="selection__img">
-							<img src="/images/goods1.jpg" alt="foto">
+							<img src="./images/goods1.jpg" alt="foto">
 							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
 						</div>
 						<div class="selection__name">Варочная панель Electrolux</div>
@@ -211,7 +211,7 @@
 					</a>
 					<a class="selection__box">
 						<div class="selection__img">
-							<img src="/images/goods1.jpg" alt="foto">
+							<img src="./images/goods1.jpg" alt="foto">
 							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
 						</div>
 						<div class="selection__name">Варочная панель Electrolux</div>
@@ -222,7 +222,7 @@
 					</a>
 					<a class="selection__box">
 						<div class="selection__img">
-							<img src="/images/goods1.jpg" alt="foto">
+							<img src="./images/goods1.jpg" alt="foto">
 							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
 						</div>
 						<div class="selection__name">Варочная панель Electrolux</div>
@@ -233,7 +233,7 @@
 					</a>
 					<a class="selection__box">
 						<div class="selection__img">
-							<img src="/images/goods1.jpg" alt="foto">
+							<img src="./images/goods1.jpg" alt="foto">
 							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
 						</div>
 						<div class="selection__name">Варочная панель Electrolux</div>
@@ -244,7 +244,7 @@
 					</a>
 					<a class="selection__box">
 						<div class="selection__img">
-							<img src="/images/goods1.jpg" alt="foto">
+							<img src="./images/goods1.jpg" alt="foto">
 							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
 						</div>
 						<div class="selection__name">Варочная панель Electrolux</div>
@@ -262,7 +262,7 @@
 				<div class="selection__wrap">
 					<a href="#" class="selection__box">
 						<div class="selection__img">
-							<img src="/images/goods1.jpg" alt="foto">
+							<img src="./images/goods1.jpg" alt="foto">
 							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
 						</div>
 						<div class="selection__name">Варочная панель Electrolux</div>
@@ -273,7 +273,7 @@
 					</a>
 					<a class="selection__box">
 						<div class="selection__img">
-							<img src="/images/goods1.jpg" alt="foto">
+							<img src="./images/goods1.jpg" alt="foto">
 							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
 						</div>
 						<div class="selection__name">Варочная панель Electrolux</div>
@@ -284,7 +284,7 @@
 					</a>
 					<a class="selection__box">
 						<div class="selection__img">
-							<img src="/images/goods1.jpg" alt="foto">
+							<img src="./images/goods1.jpg" alt="foto">
 							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
 						</div>
 						<div class="selection__name">Варочная панель Electrolux</div>
@@ -295,7 +295,7 @@
 					</a>
 					<a class="selection__box">
 						<div class="selection__img">
-							<img src="/images/goods1.jpg" alt="foto">
+							<img src="./images/goods1.jpg" alt="foto">
 							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
 						</div>
 						<div class="selection__name">Варочная панель Electrolux</div>
@@ -306,7 +306,7 @@
 					</a>
 					<a class="selection__box">
 						<div class="selection__img">
-							<img src="/images/goods1.jpg" alt="foto">
+							<img src="./images/goods1.jpg" alt="foto">
 							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
 						</div>
 						<div class="selection__name">Варочная панель Electrolux</div>
@@ -317,7 +317,7 @@
 					</a>
 					<a class="selection__box">
 						<div class="selection__img">
-							<img src="/images/goods1.jpg" alt="foto">
+							<img src="./images/goods1.jpg" alt="foto">
 							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
 						</div>
 						<div class="selection__name">Варочная панель Electrolux</div>
@@ -328,7 +328,7 @@
 					</a>
 					<a class="selection__box">
 						<div class="selection__img">
-							<img src="/images/goods1.jpg" alt="foto">
+							<img src="./images/goods1.jpg" alt="foto">
 							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
 						</div>
 						<div class="selection__name">Варочная панель Electrolux</div>
@@ -339,7 +339,7 @@
 					</a>
 					<a class="selection__box">
 						<div class="selection__img">
-							<img src="/images/goods1.jpg" alt="foto">
+							<img src="./images/goods1.jpg" alt="foto">
 							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
 						</div>
 						<div class="selection__name">Варочная панель Electrolux</div>
@@ -350,7 +350,7 @@
 					</a>
 					<a class="selection__box">
 						<div class="selection__img">
-							<img src="/images/goods1.jpg" alt="foto">
+							<img src="./images/goods1.jpg" alt="foto">
 							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
 						</div>
 						<div class="selection__name">Варочная панель Electrolux</div>
@@ -361,7 +361,7 @@
 					</a>
 					<a class="selection__box">
 						<div class="selection__img">
-							<img src="/images/goods1.jpg" alt="foto">
+							<img src="./images/goods1.jpg" alt="foto">
 							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
 						</div>
 						<div class="selection__name">Варочная панель Electrolux</div>
@@ -372,7 +372,7 @@
 					</a>
 					<a class="selection__box">
 						<div class="selection__img">
-							<img src="/images/goods1.jpg" alt="foto">
+							<img src="./images/goods1.jpg" alt="foto">
 							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
 						</div>
 						<div class="selection__name">Варочная панель Electrolux</div>
@@ -383,7 +383,7 @@
 					</a>
 					<a class="selection__box">
 						<div class="selection__img">
-							<img src="/images/goods1.jpg" alt="foto">
+							<img src="./images/goods1.jpg" alt="foto">
 							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
 						</div>
 						<div class="selection__name">Варочная панель Electrolux</div>
