--- a/app/call.html
+++ b/app/call.html
@@ -140,11 +140,11 @@
 					<div class="e-form">
 						<p>Укажите время:</p>
 						<label for="time-start">с:</label>
-						<input type="text" name="time-start" id="time-start" required pattern="^\d{1,6}$" class="input--small">
+						<input type="text" name="time-start" id="time-start"  class="input--small">
 						
 						<div class="fl-r">
 							<label for="time-end">до:</label>
-							<input type="text" name="time-end" id="time-end" required pattern="^\d{1,6}$" class="input--small">
+							<input type="text" name="time-end" id="time-end" class="input--small">
 						</div>
 					</div>
 
@@ -286,12 +286,14 @@
     <script src="/bower_components/jquery/dist/jquery.js"></script>
     <script src="scripts/jquery-ui.js"></script>
     <script src="scripts/jquery.inputmask.js"></script>
+    <script src="scripts/fancybox/jquery.fancybox.js"></script>
     <!-- endbower -->
     
     <!-- endbuild -->   
 
     <!-- build:js scripts/main.js -->
     <script src="scripts/main.js"></script>
+    <script src="components/scripts/tabs.js"></script>
     <script src="components/scripts/tabs.js"></script>
     <script src="components/scripts/droplist.js"></script>
     <script src="components/sliders/slider.js"></script>
@@ -319,6 +321,23 @@
 			"placeholder": "+7 ( ___ ) ___ - __ - __"
 		}
 	);
+
+   // $('body').inputmask.extendDefinitions({
+   //    '8': {
+   //       validator: "[0-2]",
+   //       cardinality: 1
+   //    },
+   //    '7': {
+   //       validator: "[0-5]",
+   //       cardinality: 1
+   //    }
+   // });
+
+   $('#time-start, #time-end').inputmask('99-99',
+      { 
+         "placeholder": "чч-мм",
+      }
+   );
 </script>
 
 
