--- a/app/tech.html
+++ b/app/tech.html
@@ -111,9 +111,9 @@
 		<div class="tech__tabs">
 			<ul>
 				<li class="active"><a href="#" data-tab="tech__tab--1">Варочные <br> панели</a></li>
-				<li><a href="#" data-tab="tech__tab--1">Духовые <br> шкафы</a></li>
-				<li><a href="#" data-tab="tech__tab--1">Стиральные <br> машины</a></li>
-				<li>Посудомоечные <br> машины</li>
+				<li><a href="#" data-tab="tech__tab--2">Духовые <br> шкафы</a></li>
+				<li><a href="#" data-tab="tech__tab--3">Стиральные <br> машины</a></li>
+				<li><a href="#" data-tab="tech__tab--4">Посудомоечные <br> машины</a></li>
 			</ul>
 		</div>
 	</div>
@@ -257,12 +257,89 @@
 			</div>
 		</div>
 
-		<!-- <div class="tech__content tech__tab tech__tab--2">
+		<div class="tech__content tech__tab tech__tab--2">
 			<div class="selection">
 				<div class="selection__wrap">
 					<a href="#" class="selection__box">
 						<div class="selection__img">
-							<img src="./images/goods1.jpg" alt="foto">
+							<img src="./images/goods2.jpg" alt="foto">
+							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
+						</div>
+						<div class="selection__name">Варочная панель Electrolux</div>
+						<div class="selection__product">T62R36S1</div>
+						<div class="selection__cost">
+							от 75 450 руб.
+						</div>
+					</a>
+					<a class="selection__box">
+						<div class="selection__img">
+							<img src="./images/goods2.jpg" alt="foto">
+							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
+						</div>
+						<div class="selection__name">Варочная панель Electrolux</div>
+						<div class="selection__product">T62R36S1</div>
+						<div class="selection__cost">
+							от 75 450 руб.
+						</div>
+					</a>
+					<a class="selection__box">
+						<div class="selection__img">
+							<img src="./images/goods2.jpg" alt="foto">
+							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
+						</div>
+						<div class="selection__name">Варочная панель Electrolux</div>
+						<div class="selection__product">T62R36S1</div>
+						<div class="selection__cost">
+							от 75 450 руб.
+						</div>
+					</a>
+					<a class="selection__box">
+						<div class="selection__img">
+							<img src="./images/goods2.jpg" alt="foto">
+							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
+						</div>
+						<div class="selection__name">Варочная панель Electrolux</div>
+						<div class="selection__product">T62R36S1</div>
+						<div class="selection__cost">
+							от 75 450 руб.
+						</div>
+					</a>
+					<a class="selection__box">
+						<div class="selection__img">
+							<img src="./images/goods2.jpg" alt="foto">
+							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
+						</div>
+						<div class="selection__name">Варочная панель Electrolux</div>
+						<div class="selection__product">T62R36S1</div>
+						<div class="selection__cost">
+							от 75 450 руб.
+						</div>
+					</a>
+					<a class="selection__box">
+						<div class="selection__img">
+							<img src="./images/goods2.jpg" alt="foto">
+							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
+						</div>
+						<div class="selection__name">Варочная панель Electrolux</div>
+						<div class="selection__product">T62R36S1</div>
+						<div class="selection__cost">
+							от 75 450 руб.
+						</div>
+					</a>
+					<a class="selection__box">
+						<div class="selection__img">
+							<img src="./images/goods2.jpg" alt="foto">
+							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
+						</div>
+						<div class="selection__name">Варочная панель Electrolux</div>
+						<div class="selection__product">T62R36S1</div>
+						<div class="selection__cost">
+							от 75 450 руб.
+						</div>
+					</a>
+					<a class="selection__box">
+						<div class="selection__img">
+							<img src="./images/goods2.jpg" alt="foto">
 							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
 						</div>
 						<div class="selection__name">Варочная панель Electrolux</div>
@@ -315,9 +392,16 @@
 							от 75 450 руб.
 						</div>
 					</a>
-					<a class="selection__box">
+				</div>
+			</div>
+		</div>
+
+		<div class="tech__content tech__tab tech__tab--3">
+			<div class="selection">
+				<div class="selection__wrap">
+					<a href="#" class="selection__box">
 						<div class="selection__img">
-							<img src="./images/goods1.jpg" alt="foto">
+							<img src="./images/goods3.jpg" alt="foto">
 							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
 						</div>
 						<div class="selection__name">Варочная панель Electrolux</div>
@@ -328,7 +412,201 @@
 					</a>
 					<a class="selection__box">
 						<div class="selection__img">
-							<img src="./images/goods1.jpg" alt="foto">
+							<img src="./images/goods3.jpg" alt="foto">
+							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
+						</div>
+						<div class="selection__name">Варочная панель Electrolux</div>
+						<div class="selection__product">T62R36S1</div>
+						<div class="selection__cost">
+							от 75 450 руб.
+						</div>
+					</a>
+					<a class="selection__box">
+						<div class="selection__img">
+							<img src="./images/goods3.jpg" alt="foto">
+							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
+						</div>
+						<div class="selection__name">Варочная панель Electrolux</div>
+						<div class="selection__product">T62R36S1</div>
+						<div class="selection__cost">
+							от 75 450 руб.
+						</div>
+					</a>
+					<a class="selection__box">
+						<div class="selection__img">
+							<img src="./images/goods3.jpg" alt="foto">
+							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
+						</div>
+						<div class="selection__name">Варочная панель Electrolux</div>
+						<div class="selection__product">T62R36S1</div>
+						<div class="selection__cost">
+							от 75 450 руб.
+						</div>
+					</a>
+					<a class="selection__box">
+						<div class="selection__img">
+							<img src="./images/goods3.jpg" alt="foto">
+							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
+						</div>
+						<div class="selection__name">Варочная панель Electrolux</div>
+						<div class="selection__product">T62R36S1</div>
+						<div class="selection__cost">
+							от 75 450 руб.
+						</div>
+					</a>
+					<a class="selection__box">
+						<div class="selection__img">
+							<img src="./images/goods3.jpg" alt="foto">
+							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
+						</div>
+						<div class="selection__name">Варочная панель Electrolux</div>
+						<div class="selection__product">T62R36S1</div>
+						<div class="selection__cost">
+							от 75 450 руб.
+						</div>
+					</a>
+					<a class="selection__box">
+						<div class="selection__img">
+							<img src="./images/goods3.jpg" alt="foto">
+							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
+						</div>
+						<div class="selection__name">Варочная панель Electrolux</div>
+						<div class="selection__product">T62R36S1</div>
+						<div class="selection__cost">
+							от 75 450 руб.
+						</div>
+					</a>
+					<a class="selection__box">
+						<div class="selection__img">
+							<img src="./images/goods3.jpg" alt="foto">
+							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
+						</div>
+						<div class="selection__name">Варочная панель Electrolux</div>
+						<div class="selection__product">T62R36S1</div>
+						<div class="selection__cost">
+							от 75 450 руб.
+						</div>
+					</a>
+					<a class="selection__box">
+						<div class="selection__img">
+							<img src="./images/goods3.jpg" alt="foto">
+							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
+						</div>
+						<div class="selection__name">Варочная панель Electrolux</div>
+						<div class="selection__product">T62R36S1</div>
+						<div class="selection__cost">
+							от 75 450 руб.
+						</div>
+					</a>
+					<a class="selection__box">
+						<div class="selection__img">
+							<img src="./images/goods3.jpg" alt="foto">
+							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
+						</div>
+						<div class="selection__name">Варочная панель Electrolux</div>
+						<div class="selection__product">T62R36S1</div>
+						<div class="selection__cost">
+							от 75 450 руб.
+						</div>
+					</a>
+					<a class="selection__box">
+						<div class="selection__img">
+							<img src="./images/goods3.jpg" alt="foto">
+							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
+						</div>
+						<div class="selection__name">Варочная панель Electrolux</div>
+						<div class="selection__product">T62R36S1</div>
+						<div class="selection__cost">
+							от 75 450 руб.
+						</div>
+					</a>
+					<a class="selection__box">
+						<div class="selection__img">
+							<img src="./images/goods3.jpg" alt="foto">
+							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
+						</div>
+						<div class="selection__name">Варочная панель Electrolux</div>
+						<div class="selection__product">T62R36S1</div>
+						<div class="selection__cost">
+							от 75 450 руб.
+						</div>
+					</a>
+				</div>
+			</div>
+		</div>
+
+		<div class="tech__content tech__tab tech__tab--4">
+			<div class="selection">
+				<div class="selection__wrap">
+					<a href="#" class="selection__box">
+						<div class="selection__img">
+							<img src="./images/goods4.jpg" alt="foto">
+							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
+						</div>
+						<div class="selection__name">Варочная панель Electrolux</div>
+						<div class="selection__product">T62R36S1</div>
+						<div class="selection__cost">
+							от 75 450 руб.
+						</div>
+					</a>
+					<a class="selection__box">
+						<div class="selection__img">
+							<img src="./images/goods4.jpg" alt="foto">
+							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
+						</div>
+						<div class="selection__name">Варочная панель Electrolux</div>
+						<div class="selection__product">T62R36S1</div>
+						<div class="selection__cost">
+							от 75 450 руб.
+						</div>
+					</a>
+					<a class="selection__box">
+						<div class="selection__img">
+							<img src="./images/goods4.jpg" alt="foto">
+							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
+						</div>
+						<div class="selection__name">Варочная панель Electrolux</div>
+						<div class="selection__product">T62R36S1</div>
+						<div class="selection__cost">
+							от 75 450 руб.
+						</div>
+					</a>
+					<a class="selection__box">
+						<div class="selection__img">
+							<img src="./images/goods4.jpg" alt="foto">
+							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
+						</div>
+						<div class="selection__name">Варочная панель Electrolux</div>
+						<div class="selection__product">T62R36S1</div>
+						<div class="selection__cost">
+							от 75 450 руб.
+						</div>
+					</a>
+					<a class="selection__box">
+						<div class="selection__img">
+							<img src="./images/goods4.jpg" alt="foto">
+							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
+						</div>
+						<div class="selection__name">Варочная панель Electrolux</div>
+						<div class="selection__product">T62R36S1</div>
+						<div class="selection__cost">
+							от 75 450 руб.
+						</div>
+					</a>
+					<a class="selection__box">
+						<div class="selection__img">
+							<img src="./images/goods4.jpg" alt="foto">
+							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
+						</div>
+						<div class="selection__name">Варочная панель Electrolux</div>
+						<div class="selection__product">T62R36S1</div>
+						<div class="selection__cost">
+							от 75 450 руб.
+						</div>
+					</a>
+					<a class="selection__box">
+						<div class="selection__img">
+							<img src="./images/goods4.jpg" alt="foto">
 							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
 						</div>
 						<div class="selection__name">Варочная панель Electrolux</div>
@@ -394,7 +672,9 @@
 					</a>
 				</div>
 			</div>
-		</div> -->
+		</div>
+
+
 
 
 		
@@ -517,12 +797,14 @@
     <script src="/bower_components/jquery/dist/jquery.js"></script>
     <script src="scripts/jquery-ui.js"></script>
     <script src="scripts/jquery.inputmask.js"></script>
+    <script src="scripts/fancybox/jquery.fancybox.js"></script>
     <!-- endbower -->
     
     <!-- endbuild -->   
 
     <!-- build:js scripts/main.js -->
     <script src="scripts/main.js"></script>
+    <script src="components/scripts/tabs.js"></script>
     <script src="components/scripts/tabs.js"></script>
     <script src="components/scripts/droplist.js"></script>
     <script src="components/sliders/slider.js"></script>
@@ -534,8 +816,10 @@
 
 
 <script>
-   
+   $('.tech__tabs').tab(false, 200);
+   // console.log($('.tech__tabs').tab())
 </script>
+
 
 
 
