--- a/app/txt.html
+++ b/app/txt.html
@@ -596,12 +596,14 @@
     <script src="/bower_components/jquery/dist/jquery.js"></script>
     <script src="scripts/jquery-ui.js"></script>
     <script src="scripts/jquery.inputmask.js"></script>
+    <script src="scripts/fancybox/jquery.fancybox.js"></script>
     <!-- endbower -->
     
     <!-- endbuild -->   
 
     <!-- build:js scripts/main.js -->
     <script src="scripts/main.js"></script>
+    <script src="components/scripts/tabs.js"></script>
     <script src="components/scripts/tabs.js"></script>
     <script src="components/scripts/droplist.js"></script>
     <script src="components/sliders/slider.js"></script>
