--- a/app/index.html
+++ b/app/index.html
@@ -288,12 +288,12 @@
 Мы предлагаем:
 </div>
 
-<ul class="prop prop--bg">
-	<li><a href="#" class="prop__link prop__link--sample">Бесплатный <br> замер</a></li>
-	<li><a href="#" class="prop__link prop__link--design">Дизайн-проект <br> Вашей кухни</a></li>
-	<li><a href="#" class="prop__link prop__link--assembly">Установка <br> и сборка</a></li>
-	<li><a href="#" class="prop__link prop__link--credit">Рассрочка <br> на оплату</a></li>
-</ul>
+<div class="prop prop--bg">
+	<div class="prop__list"><a href="#" class="prop__link prop__link--sample">Бесплатный <br> замер</a></div>
+	<div class="prop__list"><a href="#" class="prop__link prop__link--design">Дизайн-проект <br> Вашей кухни</a></div>
+	<div class="prop__list"><a href="#" class="prop__link prop__link--assembly">Установка <br> и сборка</a></div>
+	<div class="prop__list"><a href="#" class="prop__link prop__link--credit">Рассрочка <br> на оплату</a></div>
+</div>
 
 <div class="txt__title">
     Встраиваемая техника
@@ -518,7 +518,7 @@
   $('div.slider__head').sliderShop({
   	caseLimit: 1, //кол-во товаров в витрине
     spaceSection: 'auto', //расстояние между секциями
-    animation: 'hide-show', //тип анимации
+    animation: 'hide-show', //тип   анимации
     timer: 5000, //автопереключение
     repeat: true, //показ слайдов по кругу
     animBox: 'slider__anim', // селектор вспдывающих блоков
